<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">悦课</string>
    <string name="username">用户名：</string>
    <string name="eusername">用户名</string>
    <string name="password">密码：</string>
    <string name="epassword">密码</string>
    <string name="remeberpassword">记住密码</string>
    <string name="login">登录</string>
    <string name="identifyingcode">验证码：</string>
    <string name="eidentifyingcode">验证码</string>
    <string name="register">注册</string>
    <string name="title_back">返回</string>
    <string name="title_text">用户注册</string>
    <string name="title_A701">嵌入式系统概论</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_repassword">密码确认</string>
    <string name="register_mail">邮箱</string>
    <string name="register_academy">院系</string>
    <string name="register_realname">真实姓名</string>
    <string name="register_phone">手机号</string>
    <string name="myclass">我的课件</string>
    <string name="a701">嵌入式系统概论</string>
    <string name="d701">移动通信服务终端</string>
    <string name="html">HTML5技术介绍与实验 </string>
    <string name="topic">课件下载</string>
    <string name="more">设置</string>
    <string name="aboutit">关于悦课</string>
    <string name="reply">回复</string>
    <string name="uploadarticle">交流共享</string>
    <string name="cloud">网盘</string>
    <string name="showinfo">网盘信息</string>
    <string name="createfolder">创建文件夹</string>
    <string name="getfilelist">获取文件列表</string>
    <string name="uploadfile">文件上传</string>
    <string name="contactus">联系我们</string>
    <string name="myanswer">我要提问</string>
    <string name="zip">解压</string>
    <string name="fresh">刷新</string>
    <string name="comment">我也评两句</string>
    <string name="submit">提交</string>
    <string name="last_updated_text">最新更新</string>
    <string name="head_tips_text">提示</string>
    <string name="sharetitle">标题:</string>
    <string name="sharecontent">正文:</string>
    <string name="contentintroduct">内容简介：</string>
    <string name="author">作者：</string>
    <string name="information">信息来源：</string>
    <string name="title">文档标题:</string>
    <string name="titledownload">课程下载</string>
    <string name="studentname">学生姓名:</string>
    <string name="studentnumber">学生学号:</string>
    <string name="teacher">指导教师:</string>
    <string name="introduction">文档简介:</string>
    <string name="selectuploadfile">上传文件</string>
    <string name="notification">课程通知</string>
    <string name="reference">参考文献</string>
    <string name="question">问题：</string>
    <string name="discusstopic">讨论主题：</string>
    <string name="keyword">关键字：</string>
    <string name="describequestion">问题描述：</string>
    <string name="discusscontent">讨论内容：</string>
    <string name="submitter">提问者：</string>
    <string name="moderator">版主：</string>
    <string name="editnote">新建笔记</string>
    
    <string name="title_hint_text">标题</string>
    
    <string name="context_hint_text">内容</string>
    <string name="title_activity_edit_note">EditNote</string>
    <string name="hello_world">Hello world!</string>
    
     <string name="more_share">分享清空</string>
     <string name="more_schedule">进度显示形式</string>
     <string name="more_close">屏幕关闭时间</string>
     <string name="more_light">亮度设置</string>
     <string name="more_rest">休息提醒</string>
     <string name="more_guider">用户指导</string>
     <string name="more_noti">消息通知</string>
    

</resources>
