<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
<cn.open189.api.BigLoginButton
        android:id="@+id/buttonSmallLogin"
        android:layout_width="85dip"
        android:layout_height="23dip"  
		android:scaleType="fitXY"/>

<TextView 
    android:id="@+id/show"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_below="@id/buttonSmallLogin"/>
<Button 
    android:id="@+id/info"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_below="@id/show"
    android:text="@string/showinfo"
    />
<Button 
    android:id="@+id/creatfolder"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_below="@id/show"
    android:layout_toRightOf="@id/info"
    android:text="@string/createfolder"
    />
<Button 
    android:id="@+id/getfilelist"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_below="@id/show"
    android:layout_toRightOf="@id/creatfolder"
    android:text="@string/getfilelist"
    />
<Button 
    android:id="@+id/uploadfile"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_below="@id/info"
    android:text="@string/uploadfile"
    />
<ListView
    android:id="@+id/listfile" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/uploadfile"
    ></ListView>
</RelativeLayout>
