<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
     <TextView 
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:gravity="center_horizontal"
        android:text="答疑"
        />
    
    <TextView 
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:text="@string/question"/>
    
    
    
    <EditText 
        android:id="@+id/equestion"
        android:layout_toRightOf="@id/question"
        android:layout_alignBottom="@id/question"
        android:layout_alignBaseline="@id/question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:hint="请输入问题"/>
    
    <TextView 
        android:id="@+id/keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:layout_below="@id/question"
        android:text="@string/keyword"
        />
    
    
    
    <EditText 
        android:id="@+id/ekeyword"
        android:layout_toRightOf="@id/keyword"
        android:layout_below="@id/question"
        android:layout_alignBaseline="@id/keyword"
        android:layout_alignBottom="@id/keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:hint="多个关键字请用“，”隔开"/>
    <TextView 
        android:id="@+id/describequestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:layout_below="@id/keyword"
        android:text="@string/describequestion"/>
    
    
    
    <EditText 
        android:id="@+id/edescribequestion"
        
        android:layout_below="@id/describequestion"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:lines="3"
        android:gravity="top"
        android:background="@drawable/edittextbackground"
        android:hint="问题描述"/>
	<TextView 
	    android:id="@+id/submitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:layout_below="@id/edescribequestion"
        android:text="@string/submitter"/>
    
    
    
    <EditText 
        android:id="@+id/esubmitter"
        android:layout_toRightOf="@id/submitter"
        android:layout_below="@id/edescribequestion"
        android:layout_alignBottom="@id/submitter"
        android:layout_alignBaseline="@id/submitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:hint="提问者姓名"/>
    
    <Button 
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submitter"
        android:layout_marginTop="25sp"
        android:background="@drawable/button_creat"
	    android:textColor="#fff"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
